--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         const GACHA_COST = 20;
         const SKIN_LIST = [
             'player.png', 'player2.jpg', 'player3.jpg', 'player4.jpg',
-            'player5.jpg', 'player6.jpg', 'player7.jpg', 'player8.jpg'
+            'player5.jpg', 'player6.jpg', 'player7.jpg', 'player8.jpg', 'player9.jpg'
         ];
         const SAVE_DATA_KEY = 'revolutionRunData';
 
