--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         // ▼▼▼ ガチャ用レアスキン ▼▼▼
         const RARE_SKINS = [
             { name: 'fuziwara.jpg', rate: 0.005, rarity: "超絶革命" }, // 0.5%
-            { name: 'kora_torotuki.jpg', rate: 0.005, rarity: "超絶革命" }, // 0.5%
+            { name: 'kora_torotuki.png', rate: 0.005, rarity: "超絶革命" }, // 0.5%
             { name: 'poru.jpg', rate: 0.01, rarity: "超革命的" }, // 1%
             { name: 'sonbun.jpg', rate: 0.01, rarity: "超革命的" }, // 1%
             { name: TOROTUKI_IMG_SRC, rate: 0.01, rarity: "革命的" } // 1% (元の1%)
