--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
             { name: 'kora_torotuki.png', rate: 0.005, rarity: "超絶革命" }, // 0.5%
             { name: 'sonbun.jpg', rate: 0.01, rarity: "超革命的" }, // 1%
             { name: 'poru.jpg', rate: 0.01, rarity: "超革命的" }, // 1%
+            { name: 'ejof.png', rate: 0.01, rarity: "超革命的" }, // 1%
             { name: TOROTUKI_IMG_SRC, rate: 0.01, rarity: "革命的" } // 1% (元の1%)
         ];
 
