--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             { name: 'sonbun.jpg', rate: 0.01, rarity: "超革命的" }, // 1%
             { name: 'poru.jpg', rate: 0.01, rarity: "超革命的" }, // 1%
             { name: 'ejof.png', rate: 0.01, rarity: "超革命的" }, 
-            { name: 'matoryo.png', rate: 0.1, rarity: "超革命的" }, // 10%
+            { name: 'mattryo.png', rate: 0.1, rarity: "超革命的" }, // 10%
             { name: TOROTUKI_IMG_SRC, rate: 0.01, rarity: "革命的" } // 1% (元の1%)
         ];
 
