--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
     </div>
 
     <div id="start-screen">
-        <img src="title.png" id="title-logo" alt="最強列強革命走る">
-        <p>スワイプ: 移動・ジャンプ・しゃがみ<br>「無敵」を集めろ！（無敵ではない）</p>
-
+        <img src="title.png" id="title-logo" alt="最強列強革命走る" width="250px">
+        
         <div style="color: white; margin-top: 15px; font-size: 18px;">
             <label>現在の同志 (スキン): </label>
             <select class="skin-selector" onchange="changeSkin(this.value)" style="font-size: 16px; padding: 5px; background: #333; color: white; border: 2px solid #f0f;">
