--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
         <p>走行距離: <span id="final-distance">0</span>m</p>
         
         <p style="color: yellow; font-size: 16px;">
-            (最高スコア: <span id="high-score-over">0</span> | 
-            最長距離: <span id="high-distance-over">0</span>m)
+            <span>(最高スコア: <span id="high-score-over">0</span>最長距離: <span id="high-distance-over">0</span>m)</span>
         </p>
 
         <button onclick="resetGame(false)">再革命</button>
