--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <button onclick="openSkinListScreen()" style="background: #0ff; color: #000; margin-top: 10px; font-size: 16px;">同志一覧</button> <button onclick="openSaveLoadScreen()" style="background: #0a0; color: white; margin-top: 10px; font-size: 16px;">データ引き継ぎ</button>
         <button onclick="openCustomSkinScreen()" style="background: #0f0; color: #000; margin-top: 10px; font-size: 16px;">オリジナル同志作成</button>
         <button id="bgm-toggle-start" onclick="toggleBGM()" style="background: #444; color: white; margin-top: 10px; font-size: 16px;">BGM: OFF</button>
-        <button onclick="location.href='https://github.com/iamthe000/SaikyoRekkyoKakumeiHashiru'" style="background: #444; color: white;padding: 5px; margin-top: 30px; font-size: 8px;">このゲームのソースコードはGitHubで公開されています</button>
+        <button onclick="location.href='https://github.com/iamthe000/SaikyoRekkyoKakumeiHashiru/blob/main/index.html'" style="background: #444; color: white;padding: 5px; margin-top: 30px; font-size: 8px;">このゲームのソースコードはGitHubで公開されています</button>
 
         </div>
 
