--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         let ownedSkins = new Set(['player.png']); // デフォルトスキン
         const GACHA_COST = 20;
         const SKIN_LIST = [
-            'player.png', 'player2.jpg', 'player3.jpg', 'player4.jpg', 'player5.jpg', 'player6.jpg', 'player7.jpg', 'player8.jpg', 'player9.jpg', 'player10.jpg', 'player11.jpg', 'player12.jpg', 'player13.jpg', 'player14.jpg', 'player15.jpg', 'player16.jpg', 'player17.jpg',"player18.png"
+            'player.png', 'player2.jpg', 'player3.jpg', 'player4.jpg', 'player5.jpg', 'player6.jpg', 'player7.jpg', 'player8.jpg', 'player9.jpg', 'player10.jpg', 'player11.jpg', 'player12.jpg', 'player13.jpg', 'player14.jpg', 'player15.jpg', 'player16.jpg', 'player17.jpg',"player18.png","player19.png"
         ];
         const SAVE_DATA_KEY = 'revolutionRunData';
 
