--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,8 @@
                             resultText = `同志 [${newSkin}] は既に所持しています`;
                         }
                         
-                        document.getElementById('gacha-result').innerText = resultText;
+                        // ★★★ 修正箇所: innerText -> innerHTML ★★★
+                        document.getElementById('gacha-result').innerHTML = resultText;
                         saveData();
 
                         if (mutekiBalls >= cost) {
@@ -1292,7 +1293,8 @@
                             resultText = `<span style="color: #aaa;">虚無... 資本主義の奴隷からは何も得られませんでした...</span>`;
                         }
                         
-                        document.getElementById('gacha-result').innerText = resultText;
+                        // ★★★ 修正箇所: innerText -> innerHTML ★★★
+                        document.getElementById('gacha-result').innerHTML = resultText;
                         saveData();
 
                         if (mutekiBalls >= cost) {
