--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         let currentGachaType = 'normal'; // ▼ 追加: 現在開いているガチャの種類 ('normal' or 'rare')
 
         const SKIN_LIST = [
-            'player.png', 'player2.jpg', 'player3.jpg', 'player4.jpg', 'player5.jpg', 'player6.jpg', 'player7.jpg', 'player8.jpg', 'player9.jpg', 'player10.jpg', 'player11.jpg', 'player12.jpg', 'player13.jpg', 'player14.jpg', 'player15.jpg', 'player16.jpg', 'player17.jpg'
+            'player.png', 'player2.jpg', 'player3.jpg', 'player4.jpg', 'player5.jpg', 'player6.jpg', 'player7.jpg', 'player8.jpg', 'player9.jpg', 'player10.jpg', 'player11.jpg', 'player12.jpg', 'player13.jpg', 'player14.jpg', 'player15.jpg', 'player16.jpg', 'player17.jpg', 'player18.png'
         ];
         const SAVE_DATA_KEY = 'revolutionRunData';
 
